feat: bug fixed

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 麦穗黄了 # 你的博客名字，可以定义修订
-header-img: "img/green.png"
+header-img: "img/green.jpg"
 tagline: "cn"  
 description: "天天向上"  # 一句话描述你的博客
 baseurl: ""
