--- a/_config.yml
+++ b/_config.yml
@@ -17,12 +17,12 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://zhouxr.work/'
 
 author: your_full_name                  # change to your full name
 
 github:
-  username: github_username             # change to your github username
+  username: CollenyZ             # change to your github username
 
 twitter:
   username: twitter_username            # change to your twitter username
