feat: bug fixed

--- a/_config.yml
+++ b/_config.yml
@@ -7,29 +7,29 @@
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: Chirpy                          # the main title
+title: CollenyZ                          # the main title
 
 tagline: A text-focused Jekyll theme   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
+  zz minimal, portfolio, sidebar,
   bootstrap Jekyll theme with responsive web design
   and focuses on text presentation.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://zhouxr.work/'
+url: "https://zhouxr.work"
 
-author: your_full_name                  # change to your full name
+author: "collenyz"                  # change to your full name
 
 github:
-  username: CollenyZ             # change to your github username
+  username: "collc"             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: "collc"            # change to your twitter username
 
 social:
-  name: your_full_name                  # it will shows as the copyright owner in Footer
-  email: example@doamin.com             # change to your email address
+  name: "collc"                  # it will shows as the copyright owner in Footer
+  email: "collc"             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/username      # change to your twitter homepage
