--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Hux Blog
 SEOTitle: 周晓瑞的博客 | zhouxr
-header-img: img/avator_user.jpg
+header-img: img/avator_user.png
 email: 2226397188@qq.com
 description: "关于底层，一无所知"
 keyword: "周晓瑞, CollenyZ, zhouxr博客, 个人网站, 互联网, 移动端，iOS, Swift"
@@ -79,7 +79,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "不会就学，干就完了"
-sidebar-avatar: /img/avator_user.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/avator_user.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
