feat: bug fixed

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Hux Blog
+title: zhouxr
 SEOTitle: 周晓瑞的博客 | zhouxr
-header-img: img/avator_user.png
+header-img: img/home-bg.jpg
 email: 2226397188@qq.com
 description: "关于底层，一无所知"
 keyword: "周晓瑞, CollenyZ, zhouxr博客, 个人网站, 互联网, 移动端，iOS, Swift"
