--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: zhouxr
 SEOTitle: 周晓瑞的博客 | zhouxr
 header-img: img/home-bg.jpg
 email: 2226397188@qq.com
-description: "关于底层，一无所知"
+description: "厚积而薄发"
 keyword: "周晓瑞, CollenyZ, zhouxr博客, 个人网站, 互联网, 移动端，iOS, Swift"
 url: "https://zhouxr.work"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
@@ -13,10 +13,10 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username:     zhouxr
-zhihu_username:     zhouxr
-github_username:    zhouxr
-twitter_username:   zhouxr
+weibo_username:     ''
+jianshu_username:     'Colleny_Z'
+github_username:    'zhouxr'
+twitter_username:   ''
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
 
@@ -78,7 +78,7 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "不会就学，干就完了"
+sidebar-about-description: "一只在技术的道路上越走越远的小朋友"
 sidebar-avatar: /img/avator_user.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -101,33 +101,18 @@ page-mathjax: false
 
 
 # Friends
-friends: [
+    # friends: [
     {
     #     title: "Su",
     #     href: "http://su.gallery/"
     # },{
-        title: "乱序（Midare）",
-        href: "http://mida.re/"
-    },{
-        title: "Sherry Woo",
-        href: "https://sherrywoo.me/"
-    },{
-        title: "Kun Qian",
-        href: "http://kunq.me"
-    },{
-        title: "Ebn Zhang",
-        href: "http://ebnbin.com/"
-    },{
-        title: "SmdCn",
-        href: "http://blog.smdcn.net"
-    },{
-        title: "JiyinYiyong",
-        href: "http://tiye.me/"
-    },{
-        title: "DHong Say",
-        href: "http://dhong.co"
-    },{
-        title: "尹峰以为",
-        href: "http://ingf.github.io/"
-    }
-]
+         #    title: "乱序（Midare）",
+          #   href: "http://mida.re/"
+       #  },{
+        #     title: "Sherry Woo",
+        #     href: "https://sherrywoo.me/"
+      #   },{
+        #     title: "Kun Qian",
+       #      href: "http://kunq.me"
+      #   }
+#]
