--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "一只在技术的道路上越走越远的小朋友"
+sidebar-about-description: "代码能借用就借用"
 sidebar-avatar: /img/avator_user.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
