--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 周晓瑞的博客 | zhouxr
 header-img: img/home-bg.jpg
 email: 2226397188@qq.com
 description: "厚积而薄发"
-keyword: "周晓瑞, CollenyZ, zhouxr博客, 个人网站, 互联网, 移动端，iOS, Swift"
+keyword: "zhouxr博客, 个人网站, 互联网, 移动端，iOS, Swift"
 url: "https://zhouxr.work"            # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
