--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,8 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username:     ''
-jianshu_username:     Colleny_Z
-github_username:    zhouxr
-twitter_username:   ''
+#github_username:    zhouxr
+
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
 
@@ -78,7 +76,7 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "代码能借用就借用"
+sidebar-about-description: ""
 sidebar-avatar: /img/avator_user.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
