--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ future: true
 
 # SNS settings
 RSS: false
-#github_username:    zhouxr
+github_username:    ZhouXiaoR
 
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
